# fireworks-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  mapping_file.imp  primitives.cpp  primitives.hpp  utilities.hpp  vcpkg.json
.github/workflows/: cmake.yml  formatting.yml
cmake/: include-what-you-use.cmake  sanitizers.cmake
embed/: combiner_fragment_shader.fsh  fragment_shader.fsh  star_fragment_shader.fsh  star_vertex_shader.vsh  vertex_shader.vsh
src/: globals.hpp  main.cpp  primitives.cpp  primitives.hpp  utilities.hpp
src/wrappers/: glew.cpp  opengl.cpp  opengl.hpp  sdl.cpp  sdl.hpp
src/wrappers/opengl/: attribute_buffer_object.cpp  attribute_buffer_object.hpp  frame_buffer_object.cpp  frame_buffer_object.hpp  shader.cpp  shader.hpp
tools/: resource_embedder.cpp
wrappers/: glew.cpp  glew.hpp  opengl.cpp  opengl.hpp  sdl.cpp  sdl.hpp
wrappers/opengl/: shader.cpp  shader.hpp
